Time on each slide extended to 15s; new settings to try to stop slides being empty while sliding on mobile

--- a/src/styles/splide.css
+++ b/src/styles/splide.css
@@ -8,7 +8,7 @@
   width: 16px;
   height: 16px;
   
-  margin: 8px;
+  margin: 10px;
   margin-bottom: 20px;
 
   border-style: solid;
@@ -22,7 +22,7 @@
     width: 18px;
     height: 18px;
     
-    margin: 10px;
+    /* margin: 10px; */
     margin-bottom: 25px;
   }
 }
